cmake_minimum_required(VERSION 3.28)
project(BTVN_LTNC)

set(CMAKE_CXX_STANDARD 17)

add_executable(BTVN_LTNC Arrays_Introduction.cpp
        Basic_Data_type.cpp
        Conditional_Statement.cpp
        Functions.cpp
        Input_and_Output.cpp
        Plus_minus.cpp
        Say_Hello.cpp
        Sherlock_and_Arrays.cpp)
